#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
#+LINK: ELPA https://elpa.gnu.org/packages/%s
# Copyright (C) 2024 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Added

- Add new support files =style/csthm.el=, =style/elsarticle.el=,
  =style/enumerate.el= and =style/keytheorems.el=.

* [14.0.8] - 2024-12-11

** Added

- Improve support for folding of citations macros.  The current folding
  =[c]= is changed to a more descriptive version, using author names and
  publication years, like =[Ne21]= or =[ABC99]=.  These are extracted
  from any bib files referenced in the document or specified by the user
  option ~TeX-fold-bib-file~.

- Add support for folding of =\begin{env}= and =\end{env}= macros.  The
  replacement specifiers are controlled by the custom option
  ~TeX-fold-begin-end-spec-list~.

- Add new custom option ~TeX-fold-alert-color~ which determines the
  color used when folding the ~\alert~ macro, defaults to ~red~.

- Add new support files =style/glossaries-extra.el=,
  =style/glossaries.el=, =style/inlinegraphicx.el=, =style/minted2.el=
  (=style/minted.el= is updated to package v3.1.2) and
  =style/stocksize.el=.

- Add preliminary support for parsing =\graphicspath= in
  =style/graphicx.el=.

** Changed

- Change the default value of ~LaTeX-insert-into-comments~ from ~t~ to
  ~nil~.

* [14.0.7] - 2024-10-05

** Added

- Respect the value of ~TeX-output-dir~ when processing files with
  latexmk.  This means that the default value of ~TeX-command-list~ is
  changed.

- Add new support files =style/authblk.el=, =style/langscibook.cls=,
  =style/lstautogobble.el=, =style/lstlinebgrd.el=,
  =style/ninecolors.el=, =style/supertabular.el=, =style/tabularray.el=
  and =style/xtab.el=.

** Changed

- AUCTeX 13.3 marks the last standalone tarball release.  From now on,